# formatica

./: .env.example  .gitignore  ACTUAL_ROOT_CAUSE_FIX.md  CHANGELOG.md  COMPREHENSIVE_PERMISSIONS_IMPLEMENTATION.md  CRITICAL_FIXES_COMPLETE.md  DESIGN_REQUIREMENTS.md  DOCUMENT_CONVERSION_QUICK_SUMMARY.md  FINAL_SHOW_IN_FOLDER_FIX.md  FORMAT_SUPPORT_MATRIX.md  FORMatica_MOBILE_FIX_SUMMARY.md  GITHUB_ACTIONS_BUILD_SUMMARY.md  GOOGLE_STITCH_CORRECTION_PROMPT.md  GOOGLE_STITCH_UIUX_PROMPT.md  IMPLEMENTATION_COMPLETE.md  OPERATIONS_ANDROID.md  OPERATIONS_MANUAL.md  PANDOC_FIX_GUIDE.md  PANDOC_QUICK_REFERENCE.md  PERMISSION_DENIED_FIX.md  PERMISSION_MANUAL_GRANT_GUIDE.md  README.md  RELEASE_README.md  RELEASE_READY.md  SHOW_IN_FOLDER_COMPLETE_FIX.md  download-apk-simple.ps1  fix_syntax.js  fix_syntax_2.js  fix_syntax_3.js  formatica_prototype (5).html  install-apk-automated.ps1  pyproject.toml  requirements.txt  setup.py
.planning/: HANDOFF_SUMMARY.md  PHASE_1_COMPLETION_HANDOFF.md  PHASE_2_PLAN.md  PHASE_2_STATUS.md
Formatica_Release_v1.0.0/: FINAL_SUMMARY.md  QUICK_START.md  README.md  RELEASE_MANIFEST.md  SETUP_GUIDE.md  START_HERE.txt
RELEASE_PACKAGE/: QUICK_START.txt  RELEASE_SUMMARY.md
docs/: sqlalchemy-startup-safety.md
formatica-backend/: Dockerfile  README.md  converted_sample.html  main.py  requirements.txt
formatica_mobile/: .gitignore  APK_TEST_REPORT.md  BUILD_ERROR_FIXES.md  BUILD_ERROR_HANDLING_FIX.md  BUILD_FIX_COMPLETE.md  BUILD_FIX_POI_VERSION.md  BUILD_FIX_RUN5.md  CRITICAL_FIX_WORKING_DIRECTORY.md  DOCUMENT_CONVERSION_ASSESSMENT.md  OOM_FIX.md  (+14 more)
(+104 files in other folders)
